test/compare/testdata/github.com-golang-go/fixedbugs/bug050.go
// skip : this cannot be tested with the current implementation of the testing framework https://github.com/open2b/scriggo/issues/417

// errorcheck

// Copyright 2009 The Go Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

func main() { }	// ERROR "package"

